--- a/related_work.tex
+++ b/related_work.tex
@@ -16,8 +16,7 @@ PyWren~\cite{ref:jonas2017occupy} provides us a new perspective of stateless fun
 abstracts away cluster management overhead and is ideal for embarrassingly parallel jobs. 
 ExCamera~\cite{ref:encoding} presents a 
 framework for running general-purpose parallel tasks (encoding 4K video) 
-on a commercial serverless platform using multithreading. 
-An empirical comparison of resource utilization and performance isolation
+on a commercial serverless platform using multithreading. Another project from the same group, Cirrus~\cite{ref:jonas2019cloud}, tries to train ML model by using parameter server and serverless functions. An empirical comparison of resource utilization and performance isolation
 is provided in~\cite{ref:peeking} for AWS Lambda, 
 Azure Functions, and Google Cloud Functions.
 %to discuss the resource utilization and performance isolation efficiency of 
