--- a/conclusion.tex
+++ b/conclusion.tex
@@ -22,7 +22,7 @@ The optimizer automatically optimizes function memory use to reduce the cost
 of AWS Lambda use.  Our empirical evaluation using
 multiple applications for regression and classification (using
 the models for prediction and not explanatory value), shows that Seneca is able to quickly
-identify the best performing model for the applications and datasets that we consider.  
+identify the best performing hyperparameter setting for the applications and datasets that we consider.  
 We also show that Seneca memory optimization reduces the cost of using
 Seneca by 10-30\% for the applications studied.
 
