mz - update numbers

--- a/tables/speedup-tab.tex
+++ b/tables/speedup-tab.tex
@@ -4,7 +4,7 @@
 \hline
 Prophet & 801.5 & 6374.4 & 8x\\
 \hline
-Multi\_Reg & 158.71 & w & wx \\
+Multi\_Reg & 158.71 & 1456.8 & 9x \\
 \hline
 XGBoost & 1244.42 & 26641.2 & 21x\\
 \hline
